Version5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM1 ID VARIABLE SP SALTO STATUTES END SEMMICOLON
Rule 2     PROGRAM1 -> PROGRAM
Rule 3     SALTO -> <empty>
Rule 4     VARIABLE -> DIM IDLIST AS TIPO SEMMICOLON VARIABLE
Rule 5     VARIABLE -> <empty>
Rule 6     SP -> SUBPROCEDURE ID2 STATUTES ENDSUB SEMMICOLON RETURN SP
Rule 7     RETURN -> <empty>
Rule 8     ID2 -> ID
Rule 9     SP -> <empty>
Rule 10    STATUTES -> STATEMENTS SEMMICOLON STATUTES
Rule 11    STATUTES -> <empty>
Rule 12    STATEMENTS -> LET VAR ASSIGN E
Rule 13    STATEMENTS -> PRINT VALUE
Rule 14    STATEMENTS -> INPUT TEXT GTGT VAR
Rule 15    STATEMENTS -> CLS
Rule 16    STATEMENTS -> IF EL THEN1 STATUTES ELSE1 STATUTES ENDIF
Rule 17    STATEMENTS -> WHILE1 EL DO1 STATUTES WHEND
Rule 18    STATEMENTS -> DO2 STATUTES LOOPUNTIL EL ENDO
Rule 19    STATEMENTS -> FOR ID1 ASSIGN E TO1 E DO3 STATUTES NEXT
Rule 20    STATEMENTS -> GOSUB POINT ID
Rule 21    E -> E PLUS T
Rule 22    E -> E MINUS T
Rule 23    E -> T
Rule 24    T -> T TIMES F
Rule 25    T -> T DIVIDE F
Rule 26    T -> F
Rule 27    F -> NUMBER
Rule 28    F -> FLOATNUMBER
Rule 29    F -> VAR
Rule 30    F -> LPARENT E RPARENT
Rule 31    EL -> EL OR TL
Rule 32    EL -> TL NOT
Rule 33    EL -> TL
Rule 34    TL -> TL AND FL
Rule 35    TL -> FL
Rule 36    FL -> OPERATOR OPREL OPERATOR
Rule 37    FL -> LPARENT EL RPARENT
Rule 38    OPREL -> LT
Rule 39    OPREL -> LTE
Rule 40    OPREL -> GT
Rule 41    OPREL -> GTE
Rule 42    OPREL -> NE
Rule 43    OPREL -> EQUAL
Rule 44    OPERATOR -> VAR
Rule 45    OPERATOR -> NUMBER
Rule 46    OPERATOR -> FLOATNUMBER
Rule 47    IDLIST -> ID
Rule 48    IDLIST -> IDLIST COMMA ID
Rule 49    TIPO -> WORD
Rule 50    TIPO -> FLOAT
Rule 51    TIPO -> ARRAY DCLARRAY
Rule 52    TIPO -> MATRIX DCLMATRIX
Rule 53    TIPO -> CUBE DCLCUBE
Rule 54    DCLARRAY -> LBRACKET IDENTIFICATOR RBRACKET
Rule 55    DCLMATRIX -> LBRACKET IDENTIFICATOR RBRACKET LBRACKET IDENTIFICATOR RBRACKET
Rule 56    DCLCUBE -> LBRACKET IDENTIFICATOR RBRACKET LBRACKET IDENTIFICATOR RBRACKET LBRACKET IDENTIFICATOR RBRACKET
Rule 57    IDENTIFICATOR -> NUMBER
Rule 58    IDENTIFICATOR -> ID
Rule 59    DCLARRAY1 -> LBRACKET IDENTIFICATOR1 RBRACKET
Rule 60    DCLMATRIX1 -> LBRACKET IDENTIFICATOR1 RBRACKET LBRACKET IDENTIFICATOR1 RBRACKET
Rule 61    DCLCUBE1 -> LBRACKET IDENTIFICATOR1 RBRACKET LBRACKET IDENTIFICATOR1 RBRACKET LBRACKET IDENTIFICATOR1 RBRACKET
Rule 62    IDENTIFICATOR1 -> NUMBER
Rule 63    IDENTIFICATOR1 -> ID
Rule 64    VAR -> ID
Rule 65    VAR -> ID PUSH DCLARRAY1
Rule 66    VAR -> ID PUSH DCLMATRIX1
Rule 67    VAR -> ID PUSH DCLCUBE1
Rule 68    PUSH -> <empty>
Rule 69    ELSE1 -> ELSE
Rule 70    ELSE1 -> <empty>
Rule 71    THEN1 -> THEN
Rule 72    WHILE1 -> WHILE
Rule 73    DO1 -> DO
Rule 74    DO2 -> DO
Rule 75    ID1 -> ID
Rule 76    TO1 -> TO
Rule 77    DO3 -> DO
Rule 78    VALUE -> LPARENT VAR RPARENT
Rule 79    VALUE -> TEXT
Rule 80    TEXT -> LPARENT STRING RPARENT
Rule 81    TEXT -> <empty>

Terminals, with rules where they appear

AND                  : 34
ARRAY                : 51
AS                   : 4
ASSIGN               : 12 19
CLS                  : 15
COMMA                : 48
CUBE                 : 53
DIM                  : 4
DIVIDE               : 25
DO                   : 73 74 77
ELSE                 : 69
END                  : 1
ENDIF                : 16
ENDO                 : 18
ENDSUB               : 6
EQUAL                : 43
FLOAT                : 50
FLOATNUMBER          : 28 46
FOR                  : 19
GOSUB                : 20
GT                   : 40
GTE                  : 41
GTGT                 : 14
ID                   : 1 8 20 47 48 58 63 64 65 66 67 75
IF                   : 16
INPUT                : 14
LBRACKET             : 54 55 55 56 56 56 59 60 60 61 61 61
LET                  : 12
LOOPUNTIL            : 18
LPARENT              : 30 37 78 80
LT                   : 38
LTE                  : 39
MATRIX               : 52
MINUS                : 22
NE                   : 42
NEXT                 : 19
NOT                  : 32
NUMBER               : 27 45 57 62
OR                   : 31
PLUS                 : 21
POINT                : 20
PRINT                : 13
PROGRAM              : 2
RBRACKET             : 54 55 55 56 56 56 59 60 60 61 61 61
RPARENT              : 30 37 78 80
SEMMICOLON           : 1 4 6 10
STRING               : 80
SUBPROCEDURE         : 6
THEN                 : 71
TIMES                : 24
TO                   : 76
WHEND                : 17
WHILE                : 72
WORD                 : 49
error                : 

Nonterminals, with rules where they appear

DCLARRAY             : 51
DCLARRAY1            : 65
DCLCUBE              : 53
DCLCUBE1             : 67
DCLMATRIX            : 52
DCLMATRIX1           : 66
DO1                  : 17
DO2                  : 18
DO3                  : 19
E                    : 12 19 19 21 22 30
EL                   : 16 17 18 31 37
ELSE1                : 16
F                    : 24 25 26
FL                   : 34 35
ID1                  : 19
ID2                  : 6
IDENTIFICATOR        : 54 55 55 56 56 56
IDENTIFICATOR1       : 59 60 60 61 61 61
IDLIST               : 4 48
OPERATOR             : 36 36
OPREL                : 36
PROGRAM1             : 1
PUSH                 : 65 66 67
RETURN               : 6
SALTO                : 1
SP                   : 1 6
STATEMENTS           : 10
STATUTES             : 1 6 10 16 16 17 18 19
T                    : 21 22 23 24 25
TEXT                 : 14 79
THEN1                : 16
TIPO                 : 4
TL                   : 31 32 33 34
TO1                  : 19
VALUE                : 13
VAR                  : 12 14 29 44 78
VARIABLE             : 1 4
WHILE1               : 17
program              : 0

Parsing method: SLR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM1 ID VARIABLE SP SALTO STATUTES END SEMMICOLON
    (2) PROGRAM1 -> . PROGRAM

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    PROGRAM1                       shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM1 . ID VARIABLE SP SALTO STATUTES END SEMMICOLON

    ID              shift and go to state 4


state 3

    (2) PROGRAM1 -> PROGRAM .

    ID              reduce using rule 2 (PROGRAM1 -> PROGRAM .)


state 4

    (1) program -> PROGRAM1 ID . VARIABLE SP SALTO STATUTES END SEMMICOLON
    (4) VARIABLE -> . DIM IDLIST AS TIPO SEMMICOLON VARIABLE
    (5) VARIABLE -> .

    DIM             shift and go to state 6
    SUBPROCEDURE    reduce using rule 5 (VARIABLE -> .)
    LET             reduce using rule 5 (VARIABLE -> .)
    PRINT           reduce using rule 5 (VARIABLE -> .)
    INPUT           reduce using rule 5 (VARIABLE -> .)
    CLS             reduce using rule 5 (VARIABLE -> .)
    IF              reduce using rule 5 (VARIABLE -> .)
    FOR             reduce using rule 5 (VARIABLE -> .)
    GOSUB           reduce using rule 5 (VARIABLE -> .)
    WHILE           reduce using rule 5 (VARIABLE -> .)
    DO              reduce using rule 5 (VARIABLE -> .)
    END             reduce using rule 5 (VARIABLE -> .)

    VARIABLE                       shift and go to state 5

state 5

    (1) program -> PROGRAM1 ID VARIABLE . SP SALTO STATUTES END SEMMICOLON
    (6) SP -> . SUBPROCEDURE ID2 STATUTES ENDSUB SEMMICOLON RETURN SP
    (9) SP -> .

    SUBPROCEDURE    shift and go to state 8
    LET             reduce using rule 9 (SP -> .)
    PRINT           reduce using rule 9 (SP -> .)
    INPUT           reduce using rule 9 (SP -> .)
    CLS             reduce using rule 9 (SP -> .)
    IF              reduce using rule 9 (SP -> .)
    FOR             reduce using rule 9 (SP -> .)
    GOSUB           reduce using rule 9 (SP -> .)
    WHILE           reduce using rule 9 (SP -> .)
    DO              reduce using rule 9 (SP -> .)
    END             reduce using rule 9 (SP -> .)

    SP                             shift and go to state 7

state 6

    (4) VARIABLE -> DIM . IDLIST AS TIPO SEMMICOLON VARIABLE
    (47) IDLIST -> . ID
    (48) IDLIST -> . IDLIST COMMA ID

    ID              shift and go to state 10

    IDLIST                         shift and go to state 9

state 7

    (1) program -> PROGRAM1 ID VARIABLE SP . SALTO STATUTES END SEMMICOLON
    (3) SALTO -> .

    LET             reduce using rule 3 (SALTO -> .)
    PRINT           reduce using rule 3 (SALTO -> .)
    INPUT           reduce using rule 3 (SALTO -> .)
    CLS             reduce using rule 3 (SALTO -> .)
    IF              reduce using rule 3 (SALTO -> .)
    FOR             reduce using rule 3 (SALTO -> .)
    GOSUB           reduce using rule 3 (SALTO -> .)
    WHILE           reduce using rule 3 (SALTO -> .)
    DO              reduce using rule 3 (SALTO -> .)
    END             reduce using rule 3 (SALTO -> .)

    SALTO                          shift and go to state 11

state 8

    (6) SP -> SUBPROCEDURE . ID2 STATUTES ENDSUB SEMMICOLON RETURN SP
    (8) ID2 -> . ID

    ID              shift and go to state 13

    ID2                            shift and go to state 12

state 9

    (4) VARIABLE -> DIM IDLIST . AS TIPO SEMMICOLON VARIABLE
    (48) IDLIST -> IDLIST . COMMA ID

    AS              shift and go to state 14
    COMMA           shift and go to state 15


state 10

    (47) IDLIST -> ID .

    AS              reduce using rule 47 (IDLIST -> ID .)
    COMMA           reduce using rule 47 (IDLIST -> ID .)


state 11

    (1) program -> PROGRAM1 ID VARIABLE SP SALTO . STATUTES END SEMMICOLON
    (10) STATUTES -> . STATEMENTS SEMMICOLON STATUTES
    (11) STATUTES -> .
    (12) STATEMENTS -> . LET VAR ASSIGN E
    (13) STATEMENTS -> . PRINT VALUE
    (14) STATEMENTS -> . INPUT TEXT GTGT VAR
    (15) STATEMENTS -> . CLS
    (16) STATEMENTS -> . IF EL THEN1 STATUTES ELSE1 STATUTES ENDIF
    (17) STATEMENTS -> . WHILE1 EL DO1 STATUTES WHEND
    (18) STATEMENTS -> . DO2 STATUTES LOOPUNTIL EL ENDO
    (19) STATEMENTS -> . FOR ID1 ASSIGN E TO1 E DO3 STATUTES NEXT
    (20) STATEMENTS -> . GOSUB POINT ID
    (72) WHILE1 -> . WHILE
    (74) DO2 -> . DO

  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for CLS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for GOSUB resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    END             reduce using rule 11 (STATUTES -> .)
    ENDSUB          reduce using rule 11 (STATUTES -> .)
    ELSE            reduce using rule 11 (STATUTES -> .)
    ENDIF           reduce using rule 11 (STATUTES -> .)
    WHEND           reduce using rule 11 (STATUTES -> .)
    LOOPUNTIL       reduce using rule 11 (STATUTES -> .)
    NEXT            reduce using rule 11 (STATUTES -> .)
    LET             shift and go to state 18
    PRINT           shift and go to state 19
    INPUT           shift and go to state 20
    CLS             shift and go to state 21
    IF              shift and go to state 22
    FOR             shift and go to state 25
    GOSUB           shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28

  ! LET             [ reduce using rule 11 (STATUTES -> .) ]
  ! PRINT           [ reduce using rule 11 (STATUTES -> .) ]
  ! INPUT           [ reduce using rule 11 (STATUTES -> .) ]
  ! CLS             [ reduce using rule 11 (STATUTES -> .) ]
  ! IF              [ reduce using rule 11 (STATUTES -> .) ]
  ! FOR             [ reduce using rule 11 (STATUTES -> .) ]
  ! GOSUB           [ reduce using rule 11 (STATUTES -> .) ]
  ! WHILE           [ reduce using rule 11 (STATUTES -> .) ]
  ! DO              [ reduce using rule 11 (STATUTES -> .) ]

    STATUTES                       shift and go to state 16
    STATEMENTS                     shift and go to state 17
    WHILE1                         shift and go to state 23
    DO2                            shift and go to state 24

state 12

    (6) SP -> SUBPROCEDURE ID2 . STATUTES ENDSUB SEMMICOLON RETURN SP
    (10) STATUTES -> . STATEMENTS SEMMICOLON STATUTES
    (11) STATUTES -> .
    (12) STATEMENTS -> . LET VAR ASSIGN E
    (13) STATEMENTS -> . PRINT VALUE
    (14) STATEMENTS -> . INPUT TEXT GTGT VAR
    (15) STATEMENTS -> . CLS
    (16) STATEMENTS -> . IF EL THEN1 STATUTES ELSE1 STATUTES ENDIF
    (17) STATEMENTS -> . WHILE1 EL DO1 STATUTES WHEND
    (18) STATEMENTS -> . DO2 STATUTES LOOPUNTIL EL ENDO
    (19) STATEMENTS -> . FOR ID1 ASSIGN E TO1 E DO3 STATUTES NEXT
    (20) STATEMENTS -> . GOSUB POINT ID
    (72) WHILE1 -> . WHILE
    (74) DO2 -> . DO

  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for CLS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for GOSUB resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    END             reduce using rule 11 (STATUTES -> .)
    ENDSUB          reduce using rule 11 (STATUTES -> .)
    ELSE            reduce using rule 11 (STATUTES -> .)
    ENDIF           reduce using rule 11 (STATUTES -> .)
    WHEND           reduce using rule 11 (STATUTES -> .)
    LOOPUNTIL       reduce using rule 11 (STATUTES -> .)
    NEXT            reduce using rule 11 (STATUTES -> .)
    LET             shift and go to state 18
    PRINT           shift and go to state 19
    INPUT           shift and go to state 20
    CLS             shift and go to state 21
    IF              shift and go to state 22
    FOR             shift and go to state 25
    GOSUB           shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28

  ! LET             [ reduce using rule 11 (STATUTES -> .) ]
  ! PRINT           [ reduce using rule 11 (STATUTES -> .) ]
  ! INPUT           [ reduce using rule 11 (STATUTES -> .) ]
  ! CLS             [ reduce using rule 11 (STATUTES -> .) ]
  ! IF              [ reduce using rule 11 (STATUTES -> .) ]
  ! FOR             [ reduce using rule 11 (STATUTES -> .) ]
  ! GOSUB           [ reduce using rule 11 (STATUTES -> .) ]
  ! WHILE           [ reduce using rule 11 (STATUTES -> .) ]
  ! DO              [ reduce using rule 11 (STATUTES -> .) ]

    STATUTES                       shift and go to state 29
    STATEMENTS                     shift and go to state 17
    WHILE1                         shift and go to state 23
    DO2                            shift and go to state 24

state 13

    (8) ID2 -> ID .

    LET             reduce using rule 8 (ID2 -> ID .)
    PRINT           reduce using rule 8 (ID2 -> ID .)
    INPUT           reduce using rule 8 (ID2 -> ID .)
    CLS             reduce using rule 8 (ID2 -> ID .)
    IF              reduce using rule 8 (ID2 -> ID .)
    FOR             reduce using rule 8 (ID2 -> ID .)
    GOSUB           reduce using rule 8 (ID2 -> ID .)
    WHILE           reduce using rule 8 (ID2 -> ID .)
    DO              reduce using rule 8 (ID2 -> ID .)
    ENDSUB          reduce using rule 8 (ID2 -> ID .)


state 14

    (4) VARIABLE -> DIM IDLIST AS . TIPO SEMMICOLON VARIABLE
    (49) TIPO -> . WORD
    (50) TIPO -> . FLOAT
    (51) TIPO -> . ARRAY DCLARRAY
    (52) TIPO -> . MATRIX DCLMATRIX
    (53) TIPO -> . CUBE DCLCUBE

    WORD            shift and go to state 31
    FLOAT           shift and go to state 32
    ARRAY           shift and go to state 33
    MATRIX          shift and go to state 34
    CUBE            shift and go to state 35

    TIPO                           shift and go to state 30

state 15

    (48) IDLIST -> IDLIST COMMA . ID

    ID              shift and go to state 36


state 16

    (1) program -> PROGRAM1 ID VARIABLE SP SALTO STATUTES . END SEMMICOLON

    END             shift and go to state 37


state 17

    (10) STATUTES -> STATEMENTS . SEMMICOLON STATUTES

    SEMMICOLON      shift and go to state 38


state 18

    (12) STATEMENTS -> LET . VAR ASSIGN E
    (64) VAR -> . ID
    (65) VAR -> . ID PUSH DCLARRAY1
    (66) VAR -> . ID PUSH DCLMATRIX1
    (67) VAR -> . ID PUSH DCLCUBE1

    ID              shift and go to state 40

    VAR                            shift and go to state 39

state 19

    (13) STATEMENTS -> PRINT . VALUE
    (78) VALUE -> . LPARENT VAR RPARENT
    (79) VALUE -> . TEXT
    (80) TEXT -> . LPARENT STRING RPARENT
    (81) TEXT -> .

    LPARENT         shift and go to state 42
    GTGT            reduce using rule 81 (TEXT -> .)
    SEMMICOLON      reduce using rule 81 (TEXT -> .)

    VALUE                          shift and go to state 41
    TEXT                           shift and go to state 43

state 20

    (14) STATEMENTS -> INPUT . TEXT GTGT VAR
    (80) TEXT -> . LPARENT STRING RPARENT
    (81) TEXT -> .

    LPARENT         shift and go to state 45
    GTGT            reduce using rule 81 (TEXT -> .)
    SEMMICOLON      reduce using rule 81 (TEXT -> .)

    TEXT                           shift and go to state 44

state 21

    (15) STATEMENTS -> CLS .

    SEMMICOLON      reduce using rule 15 (STATEMENTS -> CLS .)


state 22

    (16) STATEMENTS -> IF . EL THEN1 STATUTES ELSE1 STATUTES ENDIF
    (31) EL -> . EL OR TL
    (32) EL -> . TL NOT
    (33) EL -> . TL
    (34) TL -> . TL AND FL
    (35) TL -> . FL
    (36) FL -> . OPERATOR OPREL OPERATOR
    (37) FL -> . LPARENT EL RPARENT
    (44) OPERATOR -> . VAR
    (45) OPERATOR -> . NUMBER
    (46) OPERATOR -> . FLOATNUMBER
    (64) VAR -> . ID
    (65) VAR -> . ID PUSH DCLARRAY1
    (66) VAR -> . ID PUSH DCLMATRIX1
    (67) VAR -> . ID PUSH DCLCUBE1

    LPARENT         shift and go to state 50
    NUMBER          shift and go to state 52
    FLOATNUMBER     shift and go to state 53
    ID              shift and go to state 40

    EL                             shift and go to state 46
    TL                             shift and go to state 47
    FL                             shift and go to state 48
    OPERATOR                       shift and go to state 49
    VAR                            shift and go to state 51

state 23

    (17) STATEMENTS -> WHILE1 . EL DO1 STATUTES WHEND
    (31) EL -> . EL OR TL
    (32) EL -> . TL NOT
    (33) EL -> . TL
    (34) TL -> . TL AND FL
    (35) TL -> . FL
    (36) FL -> . OPERATOR OPREL OPERATOR
    (37) FL -> . LPARENT EL RPARENT
    (44) OPERATOR -> . VAR
    (45) OPERATOR -> . NUMBER
    (46) OPERATOR -> . FLOATNUMBER
    (64) VAR -> . ID
    (65) VAR -> . ID PUSH DCLARRAY1
    (66) VAR -> . ID PUSH DCLMATRIX1
    (67) VAR -> . ID PUSH DCLCUBE1

    LPARENT         shift and go to state 50
    NUMBER          shift and go to state 52
    FLOATNUMBER     shift and go to state 53
    ID              shift and go to state 40

    EL                             shift and go to state 54
    TL                             shift and go to state 47
    FL                             shift and go to state 48
    OPERATOR                       shift and go to state 49
    VAR                            shift and go to state 51

state 24

    (18) STATEMENTS -> DO2 . STATUTES LOOPUNTIL EL ENDO
    (10) STATUTES -> . STATEMENTS SEMMICOLON STATUTES
    (11) STATUTES -> .
    (12) STATEMENTS -> . LET VAR ASSIGN E
    (13) STATEMENTS -> . PRINT VALUE
    (14) STATEMENTS -> . INPUT TEXT GTGT VAR
    (15) STATEMENTS -> . CLS
    (16) STATEMENTS -> . IF EL THEN1 STATUTES ELSE1 STATUTES ENDIF
    (17) STATEMENTS -> . WHILE1 EL DO1 STATUTES WHEND
    (18) STATEMENTS -> . DO2 STATUTES LOOPUNTIL EL ENDO
    (19) STATEMENTS -> . FOR ID1 ASSIGN E TO1 E DO3 STATUTES NEXT
    (20) STATEMENTS -> . GOSUB POINT ID
    (72) WHILE1 -> . WHILE
    (74) DO2 -> . DO

  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for CLS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for GOSUB resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    END             reduce using rule 11 (STATUTES -> .)
    ENDSUB          reduce using rule 11 (STATUTES -> .)
    ELSE            reduce using rule 11 (STATUTES -> .)
    ENDIF           reduce using rule 11 (STATUTES -> .)
    WHEND           reduce using rule 11 (STATUTES -> .)
    LOOPUNTIL       reduce using rule 11 (STATUTES -> .)
    NEXT            reduce using rule 11 (STATUTES -> .)
    LET             shift and go to state 18
    PRINT           shift and go to state 19
    INPUT           shift and go to state 20
    CLS             shift and go to state 21
    IF              shift and go to state 22
    FOR             shift and go to state 25
    GOSUB           shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28
